@startuml
hide circle

class Animaux {
  nom : text
  dtNaiss : date
  numPuce : numeric [0..1]
  numPasseport : numeric [0..1]
}

class Clients {
  nom : text
  prenom : text
  dtNaiss : date
  adresse : text
  tel : numeric
}

class Personnel {
  nom : text
  prenom : text
  dtNaiss : date
  adresse : text
  tel : numeric
  poste : {veterinaire, assistant}
}

class Medicaments {
  molecule : text
  effets : text
}

class Traitements {
  dtDebut : date
  dtSaisie : date
}

class Resultats_analyse {
  lien : text {key}
  dtSaisie
}

class Consulter {
  dateConsult : date
  observation : text
  dtSaisie : date
}

class Procedures {
  description : text
  dtSaisie : date
}

class Poids {
  mesure : numeric
  dtSaisie : date
}

class Taille {
  mesure : numeric
  dtSaisie : date
}

class Appartenir {
  debut_periode : date
  fin_periode : date
}

class Prise_medicament {
  duree : numeric
  quantite_jour : numeric
}

class Suivre {
  debut_suivi : date
  fin_suivi : date
}

class Especes {
  nom : text {key}
}

class DossierMed {
}


Animaux "1..n" - "1..n" Clients
(Animaux, Clients) .. Appartenir
Consulter "0..n" -- "1" Personnel
Personnel "1" -- "0..n" Traitements : traiter
Animaux "0..n" -- "1..n" Personnel
(Animaux, Personnel) . Suivre
Traitements "0..n" - "1..n" Medicaments
(Medicaments, Traitements) .. Prise_medicament
Procedures "0..n" - "1" Personnel : ecrire
DossierMed "1" - "1" Animaux
Resultats_analyse "0..n" - "1" DossierMed
Poids "0..n" -- "1" DossierMed
Taille "0..n" -- "1" DossierMed
DossierMed "1" -- "0..n" Procedures
DossierMed "1" -- "0..n" Consulter
DossierMed "1" -- "0..n" Traitements
Animaux "0..n" -- "1" Especes
Especes "1..n" -- "0..n" Personnel : specialite
Especes "1..n" -- "0..n" Medicaments : compatible


@enduml

Contraintes:

Pour la classe "Animaux":
  nom : NOT NULL
  numPuce : UNIQUE
  numPasseport : UNIQUE
  dtNaiss : NOT NULL

Pour la classe "Clients"
  nom : NOT NULL
  prenom : NOT NULL
  dtNaiss : NOT NULL
  adresse : NOT NULL
  tel : NOT NULL
  
Pour la classe "Personnel"
  nom : NOT NULL
  prenom : NOT NULL
  dtNaiss : NOT NULL
  adresse : NOT NULL
  tel : NOT NULL
  poste : NOT NULL

Pour la classe "Medicaments"
  molecule : NOT NULL
  effets : NOT NULL
  
Pour la classe "Traitements"
  dtDebut : date
  dtSaisie : date
  
Pour la classe "Resultats_analyse"
    dtSaisie: NOT NULL
    
Pour la classe "Consulter"
  dateConsult : NOT NULL
  dtSaisie : NOT NULL

Pour la classe "Procedures"
  description : NOT NULL
  dtSaisie : NOT NULL

Pour la classe "Poids"
  mesure : NOT NULL et mesure > 0
  dtSaisie : NOT NULL
  
Pour la classe "Taille"
  mesure : NOT NULL et mesure > 0
  dtSaisie : NOT NULL
  
Pour la classe "Appartenir" 
  debut_periode : NOT NULL
  fin_periode : NOT NULL

Pour la classe "Prise_medicament" 
  duree : NOT NULL duree > 0
  quantite_jour : NOT NULL quantite_jour > 0
  
Pour la classe "Suivre"
  debut_suivi : NOT NULL
  fin_suivi : NOT NULL
